--- a/app/src/main/res/layout/activity_set_password.xml
+++ b/app/src/main/res/layout/activity_set_password.xml
@@ -68,6 +68,7 @@
         android:layout_marginRight="20dp"
         android:background="@null"
         android:gravity="center"
+        android:hint="请输入8-16位密码"
         android:lines="1"
         android:textColor="#333333"
         android:textSize="17dp" />
