--- a/app/src/main/res/layout/fragment_my.xml
+++ b/app/src/main/res/layout/fragment_my.xml
@@ -92,6 +92,7 @@
     </RelativeLayout>
 
     <LinearLayout
+        android:id="@+id/ll_brithday"
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:layout_gravity="center_vertical"
