--- a/app/src/main/res/layout/activity_video_info.xml
+++ b/app/src/main/res/layout/activity_video_info.xml
@@ -10,111 +10,156 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:background="@drawable/gradual_change"
-        android:gravity="center"
-        android:orientation="horizontal">
-
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:orientation="vertical">
 
         <LinearLayout
-            android:id="@+id/back"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:background="@drawable/gradual_change"
+            android:gravity="center"
             android:orientation="horizontal">
 
-            <ImageButton
-                android:layout_width="18dp"
-                android:layout_height="18dp"
-                android:layout_gravity="center_vertical"
-                android:layout_marginLeft="10dp"
-                android:background="@mipmap/icon_white_back" />
 
-            <TextView
+            <LinearLayout
+                android:id="@+id/back"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <ImageButton
+                    android:layout_width="18dp"
+                    android:layout_height="18dp"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginLeft="10dp"
+                    android:background="@mipmap/icon_white_back" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:text="成就"
+                    android:textColor="#ffffff"
+                    android:textSize="17dp" />
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/tv_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="40dp"
+                android:layout_weight="1"
                 android:gravity="center"
-                android:text="成就"
+                android:text="我的成就"
                 android:textColor="#ffffff"
-                android:textSize="17dp" />
+                android:textSize="19dp" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_gravity="center_vertical"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/tv_prompt"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="center_vertical"
+                android:text="认识他人"
+                android:textColor="#333333"
+                android:textSize="19dp" />
+
+            <TextView
+                android:id="@+id/tv_start_time"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:gravity="center_vertical"
+                android:text="2018-12-30"
+                android:textColor="#999999"
+                android:textSize="13dp" />
         </LinearLayout>
 
         <TextView
-            android:id="@+id/tv_title"
+            android:id="@+id/tv_answer"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginRight="40dp"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:text="我的成就"
-            android:textColor="#ffffff"
-            android:textSize="19dp" />
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:text="我的同桌叫Daved，是个有趣的男孩子。他特别喜欢摄影，他说好的摄影作品可以发人深省或者给人温暖。"
+            android:textColor="#ff333333"
+            android:textSize="15dp" />
 
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="14dp" />
+
+        <FrameLayout
+            android:layout_width="120dp"
+            android:layout_height="160dp"
+            android:layout_gravity="center_horizontal">
+
+
+            <ImageView
+                android:id="@+id/video_img"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"></ImageView>
+
+            <ImageView
+                android:id="@+id/stat_play"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:src="@mipmap/startplay" />
+        </FrameLayout>
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:layout_gravity="center_vertical"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/tv_prompt"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:gravity="center_vertical"
-            android:text="认识他人"
-            android:textColor="#333333"
-            android:textSize="19dp" />
-
-        <TextView
-            android:id="@+id/tv_start_time"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:gravity="center_vertical"
-            android:text="2018-12-30"
-            android:textColor="#999999"
-            android:textSize="13dp" />
-    </LinearLayout>
-
-    <TextView
-        android:id="@+id/tv_answer"
+        android:id="@+id/ll_open"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:text="我的同桌叫Daved，是个有趣的男孩子。他特别喜欢摄影，他说好的摄影作品可以发人深省或者给人温暖。"
-        android:textColor="#ff333333"
-        android:textSize="15dp" />
-
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="14dp" />
-
-    <FrameLayout
-        android:layout_width="120dp"
-        android:layout_height="160dp"
-        android:layout_gravity="center_horizontal">
-
+        android:orientation="vertical">
 
         <ImageView
-            android:id="@+id/video_img"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"></ImageView>
+            android:layout_height="1dp"
+            android:background="#eeeeee" />
+
+        <LinearLayout
+
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="center_vertical"
+                android:text="评价"
+                android:textColor="#333333"
+                android:textSize="11dp" />
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:gravity="center_vertical"
+                android:src="@mipmap/closed"
+                android:textColor="#333333"
+                android:textSize="11dp" />
+        </LinearLayout>
 
         <ImageView
-            android:id="@+id/stat_play"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:src="@mipmap/startplay" />
-    </FrameLayout>
-
-    <LinearLayout
-        android:id="@+id/ll_addView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical" />
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="#eeeeee" />
+    </LinearLayout>
 </LinearLayout>
