--- a/app/src/main/res/layout/activity_add_child.xml
+++ b/app/src/main/res/layout/activity_add_child.xml
@@ -115,6 +115,7 @@
                 android:background="@null"
                 android:gravity="center_vertical"
                 android:hint="输入孩子学籍号"
+                android:inputType="number"
                 android:textColor="#353535"
                 android:textSize="17dp" />
         </LinearLayout>
@@ -178,7 +179,7 @@
                 android:layout_height="30dp"
                 android:background="@null"
                 android:hint="输入您要说的话"
-                android:textColor="#ff999999"
+                android:textColor="#353535"
                 android:textSize="17dp" />
         </LinearLayout>
 
