--- a/app/src/main/res/layout/activity_set_password.xml
+++ b/app/src/main/res/layout/activity_set_password.xml
@@ -77,6 +77,7 @@
         android:background="@null"
         android:gravity="center"
         android:hint="请输入8-16位密码"
+        android:inputType="text"
         android:lines="1"
         android:textColor="#333333"
         android:textSize="17dp" />
