--- a/app/src/main/res/layout/todo_achieve_item.xml
+++ b/app/src/main/res/layout/todo_achieve_item.xml
@@ -4,10 +4,8 @@
     android:layout_height="60dp"
     android:layout_marginLeft="10dp"
     android:layout_marginRight="10dp"
-    android:layout_marginTop="10dp"
     android:background="@drawable/list_shadow"
-    android:orientation="horizontal"
-    android:paddingTop="10dp">
+    android:orientation="horizontal">
 
     <ImageView
         android:id="@+id/head_img"
@@ -21,15 +19,26 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginLeft="10dp"
-        android:orientation="vertical">
+        android:layout_weight="1"
+        android:orientation="vertical"
+        android:paddingTop="10dp">
 
-        <TextView
-            android:id="@+id/tv_title"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="20dp"
-            android:text="我的基本信息"
-            android:textColor="#353535"
-            android:textSize="15dp" />
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/tv_title"
+                android:layout_width="wrap_content"
+                android:layout_height="20dp"
+                android:layout_weight="1"
+                android:text="我的基本信息"
+                android:textColor="#353535"
+                android:textSize="15dp" />
+
+
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -126,5 +135,21 @@
                 android:src="@mipmap/star_grey"
                 android:visibility="invisible" />
         </LinearLayout>
+
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/tv_redo"
+        android:layout_width="30dp"
+        android:layout_height="20dp"
+        android:layout_gravity="top"
+        android:layout_marginRight="10dp"
+        android:background="#F27553"
+        android:gravity="center"
+        android:text="重做"
+        android:textColor="#ffffff"
+        android:textSize="11dp"
+        android:visibility="invisible" />
+
+
 </LinearLayout>
