--- a/app/src/main/res/layout/get_score_info_info_item.xml
+++ b/app/src/main/res/layout/get_score_info_info_item.xml
@@ -23,11 +23,11 @@
             <TextView
                 android:id="@+id/tv_title"
                 android:layout_width="match_parent"
-                android:layout_height="20dp"
+                android:layout_height="25dp"
                 android:gravity="center_vertical"
-                android:text="我的基本信息"
+                android:text=""
                 android:textColor="#353535"
-                android:textSize="11dp" />
+                android:textSize="17dp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -41,16 +41,16 @@
                     android:gravity="center_vertical"
                     android:text="答题人："
                     android:textColor="@color/tab_unchecked"
-                    android:textSize="8dp" />
+                    android:textSize="12dp" />
 
                 <TextView
                     android:id="@+id/tv_name"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:gravity="center_vertical"
-                    android:text="答题人"
+                    android:text=""
                     android:textColor="@color/tab_unchecked"
-                    android:textSize="8dp" />
+                    android:textSize="12dp" />
 
                 <ImageView
                     android:layout_width="20dp"
@@ -62,16 +62,16 @@
                     android:gravity="center_vertical"
                     android:text="时间："
                     android:textColor="@color/tab_unchecked"
-                    android:textSize="8dp" />
+                    android:textSize="12dp" />
 
                 <TextView
                     android:id="@+id/tv_time"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:gravity="center_vertical"
-                    android:text="2018-06-12"
+                    android:text=""
                     android:textColor="@color/tab_unchecked"
-                    android:textSize="8dp" />
+                    android:textSize="12dp" />
 
             </LinearLayout>
 
@@ -82,7 +82,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:gravity="center_vertical"
-            android:text="3分"
+            android:text=""
             android:textColor="#3699ed"
             android:textSize="15dp" />
     </LinearLayout>
