--- a/app/src/main/res/layout/get_start_info_info_item.xml
+++ b/app/src/main/res/layout/get_start_info_info_item.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="60dp"
+    android:layout_height="100dp"
     android:background="@drawable/item_shape"
     android:orientation="vertical">
 
@@ -11,7 +11,6 @@
         android:layout_gravity="center_vertical"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
-        android:layout_marginTop="10dp"
         android:orientation="horizontal">
 
         <TextView
@@ -20,18 +19,18 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="center_vertical"
-            android:text="图文"
+            android:text=""
             android:textColor="#3699ed"
-            android:textSize="8dp" />
+            android:textSize="12dp" />
 
         <TextView
             android:id="@+id/tv_time"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:gravity="center_vertical"
-            android:text="2018-06-12"
+            android:text=""
             android:textColor="@color/tab_unchecked"
-            android:textSize="8dp" />
+            android:textSize="12dp" />
 
     </LinearLayout>
 
@@ -53,15 +52,15 @@
             <TextView
                 android:id="@+id/tv_title"
                 android:layout_width="match_parent"
-                android:layout_height="20dp"
+                android:layout_height="25dp"
                 android:gravity="center_vertical"
-                android:text="我的基本信息"
+                android:text=""
                 android:textColor="#353535"
-                android:textSize="11dp" />
+                android:textSize="17dp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="20dp"
+                android:layout_height="30dp"
                 android:layout_gravity="center_vertical"
                 android:orientation="horizontal">
 
@@ -71,16 +70,16 @@
                     android:gravity="center_vertical"
                     android:text="答题人："
                     android:textColor="@color/tab_unchecked"
-                    android:textSize="8dp" />
+                    android:textSize="12dp" />
 
                 <TextView
                     android:id="@+id/tv_name"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:gravity="center_vertical"
-                    android:text="答题人"
+                    android:text=""
                     android:textColor="@color/tab_unchecked"
-                    android:textSize="8dp" />
+                    android:textSize="12dp" />
 
                 <ImageView
                     android:layout_width="20dp"
@@ -92,42 +91,47 @@
                     android:gravity="center_vertical"
                     android:text="评星："
                     android:textColor="@color/tab_unchecked"
-                    android:textSize="8dp" />
+                    android:textSize="12dp" />
 
                 <ImageView
                     android:id="@+id/star1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
-                    android:background="@mipmap/star_grey" />
+                    android:background="@mipmap/star_grey"
+                    android:visibility="invisible" />
 
                 <ImageView
                     android:id="@+id/star2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
-                    android:background="@mipmap/star_grey" />
+                    android:background="@mipmap/star_grey"
+                    android:visibility="invisible" />
 
                 <ImageView
                     android:id="@+id/star3"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
-                    android:background="@mipmap/star_grey" />
+                    android:background="@mipmap/star_grey"
+                    android:visibility="invisible" />
 
                 <ImageView
                     android:id="@+id/star4"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
-                    android:background="@mipmap/star_grey" />
+                    android:background="@mipmap/star_grey"
+                    android:visibility="invisible" />
 
                 <ImageView
                     android:id="@+id/star5"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
-                    android:background="@mipmap/star_grey" />
+                    android:background="@mipmap/star_grey"
+                    android:visibility="invisible" />
             </LinearLayout>
 
         </LinearLayout>
@@ -137,7 +141,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:gravity="center_vertical"
-            android:text="3分"
+            android:text=""
             android:textColor="#3699ed"
             android:textSize="15dp" />
     </LinearLayout>
