--- a/app/src/main/res/layout/teacher_evaluate_item.xml
+++ b/app/src/main/res/layout/teacher_evaluate_item.xml
@@ -111,34 +111,44 @@
             android:textSize="15dp" />
 
         <ImageView
+            android:id="@+id/iv1"
             android:layout_width="10dp"
             android:layout_height="10dp"
             android:layout_gravity="center_vertical"
-            android:background="@mipmap/star_grey" />
+            android:background="@mipmap/star_grey"
+            android:visibility="invisible" />
 
         <ImageView
+            android:id="@+id/iv2"
             android:layout_width="10dp"
             android:layout_height="10dp"
             android:layout_gravity="center_vertical"
-            android:background="@mipmap/star_grey" />
+            android:background="@mipmap/star_grey"
+            android:visibility="invisible" />
 
         <ImageView
+            android:id="@+id/iv3"
             android:layout_width="10dp"
             android:layout_height="10dp"
             android:layout_gravity="center_vertical"
-            android:background="@mipmap/star_grey" />
+            android:background="@mipmap/star_grey"
+            android:visibility="invisible" />
 
         <ImageView
+            android:id="@+id/iv4"
             android:layout_width="10dp"
             android:layout_height="10dp"
             android:layout_gravity="center_vertical"
-            android:background="@mipmap/star_grey" />
+            android:background="@mipmap/star_grey"
+            android:visibility="invisible" />
 
         <ImageView
+            android:id="@+id/iv5"
             android:layout_width="10dp"
             android:layout_height="10dp"
             android:layout_gravity="center_vertical"
-            android:background="@mipmap/star_grey" />
+            android:background="@mipmap/star_grey"
+            android:visibility="invisible" />
 
     </LinearLayout>
 
