--- a/app/src/main/res/layout/activity_evaluate.xml
+++ b/app/src/main/res/layout/activity_evaluate.xml
@@ -52,6 +52,55 @@
 
     <LinearLayout
         android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_marginLeft="10dp"
+        android:gravity="center_vertical"
+        android:orientation="horizontal">
+
+
+        <TextView
+            android:id="@+id/tv_studentname"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
+            android:textColor="#333333"
+            android:textSize="19dp" />
+
+        <TextView
+            android:id="@+id/tv_studentclass"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
+            android:textColor="#999999"
+            android:textSize="15dp" />
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1" />
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:background="@mipmap/star_big_big" />
+
+        <TextView
+            android:id="@+id/star_count"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="35dp"
+            android:textColor="#3699ed"
+            android:textSize="25dp" />
+    </LinearLayout>
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#eeeeee" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="120dp"
         android:orientation="horizontal">
 
@@ -71,7 +120,6 @@
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="39dp"
                 android:gravity="center"
-                android:text="1"
                 android:textColor="#90670b"
                 android:textSize="19dp" />
 
@@ -104,7 +152,6 @@
                     android:id="@+id/star_point"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="422"
                     android:textColor="#3699ed"
                     android:textSize="25dp" />
 
@@ -131,14 +178,13 @@
                     android:id="@+id/pingjia_point"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="422"
                     android:textColor="#3699ed"
                     android:textSize="25dp" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="获评总分"
+                    android:text="问卷总分"
                     android:textColor="#333333"
                     android:textSize="17dp" />
             </LinearLayout>
@@ -151,40 +197,6 @@
         android:layout_height="1dp"
         android:background="#eeeeee" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:gravity="center_vertical"
-        android:orientation="horizontal">
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:background="@mipmap/star_big" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
-            android:text="获星个数"
-            android:textColor="#333333"
-            android:textSize="17dp" />
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1" />
-
-        <TextView
-            android:id="@+id/star_count"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="35dp"
-            android:text="520"
-            android:textColor="#3699ed"
-            android:textSize="25dp" />
-    </LinearLayout>
 
     <ImageView
         android:layout_width="match_parent"
@@ -230,7 +242,7 @@
             android:layout_weight="1"
             android:background="#3699ed"
             android:gravity="center"
-            android:text="获星详情"
+            android:text="任务获星"
             android:textColor="#ffffff"
             android:textSize="14dp" />
 
@@ -242,7 +254,7 @@
             android:layout_weight="1"
             android:background="@drawable/textview_border"
             android:gravity="center"
-            android:text="获分详情"
+            android:text="问卷得分"
             android:textColor="#007aff"
             android:textSize="14dp" />
     </LinearLayout>
