--- a/app/src/main/res/layout/activity_tu_wen.xml
+++ b/app/src/main/res/layout/activity_tu_wen.xml
@@ -70,9 +70,40 @@
         android:layout_marginTop="10dp"
         android:background="#F8F8F8"
         android:gravity="left"
-        android:maxLength="300"
+        android:maxLength="160"
         android:textColorHint="#999999"
         android:textSize="15dp" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="25dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:background="#F8F8F8">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="1" />
+
+        <TextView
+            android:id="@+id/tv_text_count"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:text="0"
+            android:textColor="#999999"
+            android:textSize="15dp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginRight="10dp"
+            android:gravity="center"
+            android:text="/160"
+            android:textColor="#999999"
+            android:textSize="15dp" />
+    </LinearLayout>
     <!--展示上传的图片-->
     <GridView
         android:id="@+id/gridView"
